k8s/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webapp
  labels:
    app: go-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-webapp
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
      - name: go-webapp
        image: <docker-user-name>/go-webapp
        ports:
        - containerPort: 8080
